Fix some broken css after BP6 upgrade (#806)

--- a/judgels-client/src/components/Header/Header.scss
+++ b/judgels-client/src/components/Header/Header.scss
@@ -1,6 +1,6 @@
 @use '../../styles/base' as *;
 
-.header {
+.bp6-navbar.header {
   height: 50px;
   color: white;
 
