--- a/judgels-client/src/components/ProblemSpoilerWidget/ProblemSpoilerWidget.scss
+++ b/judgels-client/src/components/ProblemSpoilerWidget/ProblemSpoilerWidget.scss
@@ -1,6 +1,6 @@
 .problem-spoiler-switch {
   display: inline-block;
-  margin-right: 10px;
+  margin-right: 5px;
 
   .bp6-control-indicator {
     margin-right: 5px;
